--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,9 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-use-websocket": "^4.3.1",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
